updates likes component for correct icon, updates social stat spacing within cards

--- a/src/assets/css/molecules/_card-owner-meta.scss
+++ b/src/assets/css/molecules/_card-owner-meta.scss
@@ -1,5 +1,6 @@
 .card-owner-meta {
   @extend .clearfix;
+  padding-bottom: 3rem; // to clear the absolute positioning of the card social stats
   .card-owner-media, .card-owner-meta-info {
     float: left;
   }
